takeoff_unknown_airport, cup file tests, and cup files too in config file for airports

--- a/example.config.main.yml
+++ b/example.config.main.yml
@@ -6,9 +6,12 @@ encryption:
 airports:
   # Directories containing OpenAIP files for airport geocoding.
   # Register an account on openaip.net to download the files you need.
-  directories:
+  openaip:
     - ./openaip-gb/
     - ./openaip-de/
+  cup:
+    - ./cup-us/
+    - ./cup-ru/
 email:
   # Notifications driver. Currently only smtp is supported
   driver: "smtp"
