--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,15 @@ jobs: # basic units of work in a run
     steps:
       - checkout
 
-      - run:
-          name: "Test Markdown Files"
-          command: |
-            wget https://github.com/felicianotech/md-proofer/releases/download/v0.1.0/md-proofer-v0.1.0-linux-amd64.tar.gz
-            tar xfz md-proofer-v*.tar.gz
-            sudo chmod +x ./md-proofer
-            echo "Test Airtrack documentation Markdown files"
-            echo "===================================================================================="
-            ./md-proofer lint docs/
+#      - run:
+#          name: "Test Markdown Files"
+#          command: |
+#            wget https://github.com/felicianotech/md-proofer/releases/download/v0.1.0/md-proofer-v0.1.0-linux-amd64.tar.gz
+#            tar xfz md-proofer-v*.tar.gz
+#            sudo chmod +x ./md-proofer
+#            echo "Test Airtrack documentation Markdown files"
+#            echo "===================================================================================="
+#            ./md-proofer lint docs/
 
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
