--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,12 @@ jobs: # basic units of work in a run
             - go-mod-v4-{{ checksum "go.sum" }}
 
       - run:
-          name: Install go-bindata and easyjson
-          command: make install-go-bindata install-easyjson
+          name: Install build tools
+          command: sudo apt install autoconf libtool libprotobuf-dev libprotoc-dev libncurses-dev protobuf-compiler librrd-dev build-essential
+
+      - run:
+          name: Install go-bindata and easyjson and protobuf-c
+          command: make install-go-bindata install-easyjson install-protobuf-c
 
       - run:
           name: Run unit tests
