--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs: # basic units of work in a run
 
       - run:
           name: Install go-bindata and easyjson and protobuf-c
-          command: make install-go-bindata install-easyjson install-protobuf-c
+          command: make install-protobuf-c install-go-bindata install-easyjson
 
       - run:
           name: Run unit tests
