--- a/example.config.main.yml
+++ b/example.config.main.yml
@@ -4,6 +4,10 @@ adsbx:
   # a local cache of the API
   # url: http://proxy.localhost:8080/api/aircraft/json/
   apikey: ADSBX API KEY
+beast:
+  # Configure a single local beast server (dump1090 or readsb)
+  - host: localhost
+    port: 30005
 airports:
   # Directories containing OpenAIP files for airport geocoding.
   # Register an account on openaip.net to download the files you need.
