--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,43 @@ jobs: # basic units of work in a run
           key: go-mod-v4-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
+  build-postgres: # runs not using Workflows must have a `build` job as entry point
+    docker: # run the steps with Docker
+      # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
+      - image: circleci/golang:1.15
+      - image: nimbustech/postgres-ssl:9.5
+        environment:
+          POSTGRES_USER: airtrack_user
+          POSTGRES_DB: airtrack_test_0
 
+    steps: # steps that comprise the `build` job
+      - checkout # check out source code to working directory
+
+      - restore_cache: # restores saved cache if no changes are detected since last run
+          keys:
+            - go-mod-v4-{{ checksum "go.sum" }}
+
+      - run:
+          name: Install build tools
+          command: sudo apt install autoconf libtool libprotobuf-dev libprotoc-dev libncurses-dev protobuf-compiler librrd-dev build-essential
+
+      - run:
+          name: Install go-bindata and easyjson and protobuf tools
+          command: make install-protobuf-c install-protoc-gen-go install-go-bindata install-easyjson
+
+      - run:
+          name: Run unit tests
+          # store the results of our tests in the $TEST_RESULTS directory
+          command: AIRTRACK_TEST_DB_DRIVER=postgres AIRTRACK_TEST_DB_PORT=5432 AIRTRACK_TEST_DB_USER=airtrack_user AIRTRACK_TEST_DB_PASS=airtrack_pass TESTOPTIONS="-v " make test
+
+      - save_cache:
+          key: go-mod-v4-{{ checksum "go.sum" }}
+          paths:
+            - "/go/pkg/mod"
 workflows:
   version: 2
   build-workflow:
     jobs:
       - build
+      - build-postgres
       - docs
