--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2 # use CircleCI 2.0
 jobs: # basic units of work in a run
 
-  build: # runs not using Workflows must have a `build` job as entry point
+  build-sqlite3: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
       # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
       - image: circleci/golang:1.15
@@ -98,6 +98,6 @@ workflows:
   version: 2
   build-workflow:
     jobs:
-      - build
+      - build-sqlite3
       - build-postgres
       - build-mysql
