--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,9 @@ jobs: # basic units of work in a run
           name: Install go-bindata and easyjson and protobuf tools
           command: make install-protobuf-c install-protoc-gen-go install-go-bindata install-easyjson
       - run:
+          name: Download openAIP airport data
+          command: go run contrib/refresh_airports_openaip/main.go
+      - run:
           name: Run unit tests
           # store the results of our tests in the $TEST_RESULTS directory
           command: TESTOPTIONS="-v " make build-airtrack-linux-amd64
